; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_stream_readline_bytewise.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_subr/extr_stream.c_stream_readline_bytewise.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN__LINE_CHUNK_SIZE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@FALSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*, i8*, i32*, i32*)* @stream_readline_bytewise to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @stream_readline_bytewise(i32** %0, i32* %1, i8* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i8, align 1
  store i32** %0, i32*** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  %16 = load i32, i32* @SVN__LINE_CHUNK_SIZE, align 4
  %17 = load i32*, i32** %11, align 8
  %18 = call i32* @svn_stringbuf_create_ensure(i32 %16, i32* %17)
  store i32* %18, i32** %12, align 8
  %19 = load i8*, i8** %9, align 8
  store i8* %19, i8** %14, align 8
  br label %20

20:                                               ; preds = %48, %5
  %21 = load i8*, i8** %14, align 8
  %22 = load i8, i8* %21, align 1
  %23 = icmp ne i8 %22, 0
  br i1 %23, label %24, label %52

24:                                               ; preds = %20
  store i32 1, i32* %13, align 4
  %25 = load i32*, i32** %10, align 8
  %26 = call i32 @svn_stream_read_full(i32* %25, i8* %15, i32* %13)
  %27 = call i32 @SVN_ERR(i32 %26)
  %28 = load i32, i32* %13, align 4
  %29 = icmp ne i32 %28, 1
  br i1 %29, label %30, label %36

30:                                               ; preds = %24
  %31 = load i32, i32* @TRUE, align 4
  %32 = load i32*, i32** %8, align 8
  store i32 %31, i32* %32, align 4
  %33 = load i32*, i32** %12, align 8
  %34 = load i32**, i32*** %7, align 8
  store i32* %33, i32** %34, align 8
  %35 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %35, i32** %6, align 8
  br label %66

36:                                               ; preds = %24
  %37 = load i8, i8* %15, align 1
  %38 = sext i8 %37 to i32
  %39 = load i8*, i8** %14, align 8
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %38, %41
  br i1 %42, label %43, label %46

43:                                               ; preds = %36
  %44 = load i8*, i8** %14, align 8
  %45 = getelementptr inbounds i8, i8* %44, i32 1
  store i8* %45, i8** %14, align 8
  br label %48

46:                                               ; preds = %36
  %47 = load i8*, i8** %9, align 8
  store i8* %47, i8** %14, align 8
  br label %48

48:                                               ; preds = %46, %43
  %49 = load i32*, i32** %12, align 8
  %50 = load i8, i8* %15, align 1
  %51 = call i32 @svn_stringbuf_appendbyte(i32* %49, i8 signext %50)
  br label %20

52:                                               ; preds = %20
  %53 = load i32, i32* @FALSE, align 4
  %54 = load i32*, i32** %8, align 8
  store i32 %53, i32* %54, align 4
  %55 = load i32*, i32** %12, align 8
  %56 = load i8*, i8** %14, align 8
  %57 = load i8*, i8** %9, align 8
  %58 = ptrtoint i8* %56 to i64
  %59 = ptrtoint i8* %57 to i64
  %60 = sub i64 %58, %59
  %61 = trunc i64 %60 to i32
  %62 = call i32 @svn_stringbuf_chop(i32* %55, i32 %61)
  %63 = load i32*, i32** %12, align 8
  %64 = load i32**, i32*** %7, align 8
  store i32* %63, i32** %64, align 8
  %65 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %65, i32** %6, align 8
  br label %66

66:                                               ; preds = %52, %30
  %67 = load i32*, i32** %6, align 8
  ret i32* %67
}

declare dso_local i32* @svn_stringbuf_create_ensure(i32, i32*) #1

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_stream_read_full(i32*, i8*, i32*) #1

declare dso_local i32 @svn_stringbuf_appendbyte(i32*, i8 signext) #1

declare dso_local i32 @svn_stringbuf_chop(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
